--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-masonry": "^13.0.0",
     "ngx-owl-carousel-o": "^15.0.0",
     "ngx-toastr": "^15.0.0",
+    "nodemailer": "^6.9.1",
     "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
     "script-loader": "^0.7.2",
@@ -50,6 +51,7 @@
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/nodemailer": "^6.4.7",
     "angular-cli-ghpages": "^1.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
